--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/aswintalk76/AshwaniNodeJs#readme",
   "dependencies": {
     "colors": "^1.4.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
